crates/api/tests/snapshots/snapshots__workspace_add.snap
---
source: crates/api/tests/snapshots.rs
expression: "(WorkspaceAddParams { root: \"C:/src/repo\".into(), name: None },\nsummary.clone())"
---
[
  {
    "root": "C:/src/repo"
  },
  {
    "id": "w1",
    "root": "C:\\src\\repo",
    "name": "repo",
    "created_at": "2026-09-12T10:00:00.000Z",
    "last_used_at": "2026-09-12T11:00:00.000Z"
  }
]
